# shityOS

./: .gitignore  CMakeLists.txt  grub.cfg
kernel/: .gitignore  Makefile  init.c  kernel.ld  string.c  tty.c  util.c
kernel/arch/x86/boot/: boot.asm  multiboot.h
kernel/arch/x86/debug/: serial.c
kernel/arch/x86/descriptor_tables/: gdt.c  idt.c
kernel/arch/x86/gdt/: gdt.c
kernel/arch/x86/intr/: handler.c  idt.c  intr_stub.asm  pic.c  pic.h  pit.h  task.c  task.h
kernel/arch/x86/mm/: pmm.c
kernel/arch/x86/sys/: util.c  util.h
kernel/arch/x86/tty/: serial.c  tty.c  vga.h  vga_color.h  vga_text.h
kernel/arch/x86/util/: util.c  util.h
kernel/debug/: serial.c
kernel/impl/: gdt.c  init.c
kernel/impl/boot/: boot.asm  init.c
kernel/impl/intr/: exceptions.asm  gdt.c  handler.c  idt.c  intr.asm  intr_stub.asm  pic.c  task.c
kernel/impl/io/: keyboard.c  serial.c
kernel/impl/mm/: gdt.c  heap.c  kmalloc.c  pmm.c  string.c  vmm.c
kernel/impl/task/: task.asm  task.c
kernel/impl/tty/: serial.c  tty.c
kernel/include/: gdt.h  string.h  util.h
kernel/include/boot/: multiboot.h
kernel/include/debug/: serial.h
kernel/include/def/: assert.h  color.h  err.h  int.h  kernel.h
kernel/include/intr/: intr.h  pic.h  pit.h
kernel/include/io/: keyboard.h  serial.h  util.h
kernel/include/mm/: gdt.h  heap.h  mem.h  pmm.h  vmm.h
kernel/include/string/: string.h
kernel/include/sys/: string.h
kernel/include/sys/def/: color.h  int.h
kernel/include/task/: task.h
kernel/include/tty/: tty.h  vga.h  vga_color.h  vga_text.h
kernel/src/boot/: boot.asm  init.c
kernel/src/intr/: exceptions.asm  handler.c  intr.asm  pic.c
kernel/src/io/: serial.c
kernel/src/mm/: gdt.c  pmm.c  string.c  vmm.c
kernel/src/task/: task.c
kernel/x86/: kernel.c  kernel.ld  string.c
kernel/x86/init/: start.asm
kernel/x86/tty/: tty.c
scripts/: build.sh  clean.sh  debug.sh  gdb.sh  run.sh
